--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="#">Careers</a>
         </div>
 
-        <button type="button" class="header__cta hide-for-mobile">
+        <button type="button" class="header__cta hide-for-mobile hide">
           Request Invite
         </button>
       </nav>
