--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <span></span>
         </a>
 
-        <div class="header__links">
+        <div class="header__links hide-for-mobile">
           <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
