--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p>
             Take your financial life online. Your Easybank account will be a
             one-stop-shop for spending, saving, budgeting, investing, and much
-            more.
+            more........
           </p>
           <a href="#" class="button hero__cta">Request Invite</a>
         </div>
